<resources>

    <string name="app_name">HelpMates</string>
    <string name="editTextChooseUni">Select your university:</string>
    <string name="radioBtnSJSU">San Jose State University</string>
    <string name="buttonChooseDone">CONTINUE</string>
    <string name="radioBtnOther">Other University</string>
    <string name="displayMessage">Congrats!</string>
    <string name="textViewAlreadyUser">Already a user?</string>
    <string name="buttonLogin">LOGIN</string>
    <string name="textViewEnterUsername">Student ID:</string>
    <string name="textViewEnterPassword">Password:</string>
    <string name="editTextEnterUsername">012345678</string>
    <string name="editTextEnterPassword">Password</string>
    <string name="buttonSignIn">SIGN IN</string>

    <color name="lightgrey">#63b7af</color>

    <string name="lblPassword">"  Enter Your Password :"</string>
    <string name="btn_submit">Submit</string>
    <string name="passwordSetup">Configure your password</string>
    <string name="confirm_pass">"  Confirm password :"</string>
    <string name="textViewCreatePost">Create post</string>
    <string name="editTextCreatePost">What do you wanna share?</string>
    <string name="textViewRequest">Is this post a service request?</string>
    <string name="radioBtnRequestYes">Yes</string>
    <string name="radioBtnRequestNo">No</string>
    <string name="btnSubmitPost">Post</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="createPostBtn">Create New Post</string>
    <string name="postTextView">Posts will appear here!</string>
    <string name="profileStudentName">Name</string>

</resources>

