<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/linearLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".passwordActivity"
    android:background="#0f3b52"
    >

    <EditText
        android:id="@+id/confirm_pass"
        android:layout_width="300dp"
        android:layout_height="40dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="25dp"
        android:background="@drawable/button_round"
        android:drawableLeft="@drawable/pass_icon"
        android:ems="10"
        android:hint="@string/confirm_pass"
        android:inputType="textPassword"
        android:typeface="serif"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textPassword" />

    <TextView
        android:id="@+id/passwordSetup"
        android:layout_width="313dp"
        android:layout_height="31dp"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="56dp"
        android:shadowColor="#00ccff"
        android:shadowDx="1"
        android:shadowDy="1"


        android:shadowRadius="2"
        android:text="@string/passwordSetup"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:textColor="#FFFFFF"
        android:textSize="24dp"
        android:textStyle="bold"
        android:typeface="serif"

        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.475"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/textPassword"
        android:layout_width="300dp"
        android:layout_height="40dp"
        android:layout_marginTop="60dp"
        android:background="@drawable/button_round"
        android:drawableLeft="@drawable/pass_icon"
        android:ems="10"
        android:hint="@string/lblPassword"
        android:inputType="textPassword"
        android:typeface="serif"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/passwordSetup" />

    <Button
        android:id="@+id/btnSubmit"
        android:layout_width="300dp"
        android:layout_height="40dp"
        android:layout_marginTop="8dp"
        android:text="@string/btn_submit"
        android:typeface="serif"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/confirm_pass"
        app:layout_constraintVertical_bias="0.071" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="173dp"
        android:layout_height="199dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnSubmit"
        app:layout_constraintVertical_bias="0.093"
        app:srcCompat="@drawable/security_icon" />

</androidx.constraintlayout.widget.ConstraintLayout>